--- a/app.css
+++ b/app.css
@@ -39,11 +39,14 @@ body {
     align-items: center;
     text-align: center;
 }
-
+.destination:hover h2 {
+    transform: rotate(0deg);
+}
 h2 {
     margin: 0;
     transform: rotate(-45deg);
     text-shadow: 0 0 5px #01579b;
+    trasition:transfrom(0.5s);
 }
 
 #florida {
